tests/sksl/errors/UnsupportedGLSLIdentifiers.dsl.glsl
### Compilation failed:

error: unknown identifier 'gl_FragCoord'

error: unknown identifier 'gl_FragColor'

2 errors
